err/products.plonepopoll.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/Extensions'...
Compiling './lib/python3.5/site-packages/Products/PlonePopoll/Extensions/Migration.py'...
***   File "./lib/python3.5/site-packages/Products/PlonePopoll/Extensions/Migration.py", line 36
    print """
    -------------------------------------------------
        Execute migration from old CMF PlonePopoll
        to the new archetypes one
    """
             
                                                     
                                                  
                                 
      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/PlonePopoll/PlonePopollBackend.py'...
***   File "./lib/python3.5/site-packages/Products/PlonePopoll/PlonePopollBackend.py", line 70
    raise NotImplementedError, "Has to be redefined in subclasses"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/PlonePopoll/PlonePopollTool.py'...
***   File "./lib/python3.5/site-packages/Products/PlonePopoll/PlonePopollTool.py", line 111
    raise NameError, 'unicity' + unicity
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/PlonePopoll/browser'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/content'...
Compiling './lib/python3.5/site-packages/Products/PlonePopoll/content/PlonePopoll.py'...
***   File "./lib/python3.5/site-packages/Products/PlonePopoll/content/PlonePopoll.py", line 123
    raise RuntimeError, "This poll is not active."
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/PlonePopoll/doc'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/i18n'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/profiles'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/profiles/default'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/skins'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/skins/PlonePopoll'...
Compiling './lib/python3.5/site-packages/Products/PlonePopoll/skins/PlonePopoll/get_plonepopoll_ftests.py'...
***   File "./lib/python3.5/site-packages/Products/PlonePopoll/skins/PlonePopoll/get_plonepopoll_ftests.py", line 82
    return suite
               ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/PlonePopoll/tests'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/website'...
Listing './lib/python3.5/site-packages/Products/PlonePopoll/www'...
Listing './lib/python3.5/site-packages/Products.PlonePopoll-2.8b1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
